2003-10-30  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* time-conf.in: fixed the ntpd server for debian, it was "ntp-simple",
	  not "ntpd"
	* network.pl.in, time-conf.in: fixed ntp and smbd servers
	  activation/deactivation

2003-10-26  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in: fixed XML generation when iwconfig is missing

2003-10-24  Carlos Garnacho Parro  <garnacho@tuxerver.net>
 
        * Release 0.29.0

2003-10-23  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in: added a small delay between ifup and ifdown when
	  an interface has changed

2003-10-22  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* time-conf.in: added gentoo to conf_get_replace_table(). fixes
	  bug #123400

2003-10-20  Carlos Garnacho Parro  <garnacho@tuxerver.net>
 
         * time-conf.in: made the XML to send the months beginning from 1
           instead of 0, now it works in the same way getting than
	   setting the XML

2003-10-19  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in, network-conf.in: added wireless interfaces support
	  for debian >= woody, redhat >= 7.2 and mandrake >= 9.0

2003-10-13  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* release 0.28.0

2003-10-09  Gerhard Mourani  <gmourani@openna.com>

	* network-conf.in, network.pl.in, package-conf.in, platform.pl.in,
	  print.pl.in, service.pl.in, services-conf.in, shares-conf.in,
	  time-conf.in, users-conf.in: added OpenNA support

2003-10-08  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* xml.pl.in: (gst_xml_read_stdin) improved xml reading
	* general.pl.in: use autoflush for both STDERR and STDOUT, changed
	  textdomain

2003-09-15  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* users-conf.in: added $gentoo_logindefs_defaults, whose default main
	  group is "users". Fixes bug #122163

2003-09-15  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* users-conf.in: added Mandrake 9.X support for the users tool